--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "highlight.js": "^11.11.1",
     "html2canvas": "^1.4.1",
@@ -22,6 +23,7 @@
     "jwt-decode": "^4.0.0",
     "mermaid": "^11.12.2",
     "react": "^19.2.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
